--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We belive in making comunities sustainble through empowering
+      artisans Refugees with the form of luxury crafts and connecting them
+      with designers for skill development and get them employed."
     />
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
@@ -50,7 +52,6 @@
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -58,7 +59,7 @@
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <title>All Base Energy</title>
+    <title>Handscart</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
